--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".MainPage">
 
+    <include
+        android:id="@+id/action_bar"
+        layout="@layout/action_bar">
+    </include>
+
     <Button
         android:id="@+id/vocab"
         android:layout_width="350dp"
@@ -38,8 +43,8 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="84dp"
         android:text="Welcome!"
         android:textSize="36sp"
         app:layout_constraintStart_toStartOf="parent"
