--- a/app/src/main/res/layout/activity_questionslist.xml
+++ b/app/src/main/res/layout/activity_questionslist.xml
@@ -6,11 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".questionslist">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <include
+            android:id="@+id/action_bar"
+            layout="@layout/action_bar">
+        </include>
+        
         <TextView
             android:id="@+id/messageWindow2"
             android:layout_width="match_parent"
