--- a/app/src/main/res/layout/activity_mock_exam.xml
+++ b/app/src/main/res/layout/activity_mock_exam.xml
@@ -11,17 +11,34 @@
 
     <Button
         android:id="@+id/Beginexam"
-        android:layout_width="246dp"
+        android:layout_width="353dp"
         android:layout_height="56dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         android:onClick="onClick1"
         android:text="BEGIN EXAM"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <SeekBar
+        android:id="@+id/seekBar2"
+        android:layout_width="266dp"
+        android:layout_height="66dp"
+        tools:layout_editor_absoluteX="59dp"
+        tools:layout_editor_absoluteY="129dp" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="134dp"
+        android:layout_height="32dp"
+        android:textSize="24sp"
+        tools:layout_editor_absoluteX="125dp"
+        tools:layout_editor_absoluteY="225dp" />
+
 </android.support.constraint.ConstraintLayout>
