--- a/app/src/main/res/layout/word_item.xml
+++ b/app/src/main/res/layout/word_item.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--This is the xml for the individual word object to be populated in the listview -->
     <Button
         android:id="@+id/getDefinition"
         android:layout_width="104dp"
