--- a/app/src/main/res/layout/activity_questionslist.xml
+++ b/app/src/main/res/layout/activity_questionslist.xml
@@ -15,8 +15,10 @@
             android:id="@+id/messageWindow2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:lineSpacingExtra="6dp"
             android:text="TextView"
-            android:textSize="14sp" />
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/questionContent"
@@ -59,7 +61,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="previous question"
+            android:text="previous"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textSize="18sp" />
 
@@ -68,7 +70,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="next question"
+            android:text="next"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textSize="18sp" />
 
@@ -77,8 +79,7 @@
             style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Submit All and Finish"
-            android:textAppearance="@style/TextAppearance.AppCompat" />
+            android:text="Submit All and Finish" />
 
     </LinearLayout>
 </ScrollView>
