--- a/app/src/main/res/layout/activity_vocab2.xml
+++ b/app/src/main/res/layout/activity_vocab2.xml
@@ -13,9 +13,8 @@
 
     <Button
         android:id="@+id/refresh"
-        android:layout_width="wrap_content"
+        android:layout_width="125dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:text="Refresh"
@@ -42,7 +41,7 @@
 
     <Button
         android:id="@+id/add"
-        android:layout_width="wrap_content"
+        android:layout_width="125dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:onClick="add"
@@ -54,7 +53,7 @@
 
     <Button
         android:id="@+id/save"
-        android:layout_width="wrap_content"
+        android:layout_width="125dp"
         android:layout_height="wrap_content"
         android:text="Save"
         app:layout_constraintBaseline_toBaselineOf="@+id/refresh"
