--- a/app/src/main/res/layout/word_item.xml
+++ b/app/src/main/res/layout/word_item.xml
@@ -14,7 +14,10 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:background="@drawable/rounded_buttontm"
         android:text="Definition"
+        android:textColor="#000"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/actualWord"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/actualWord"
@@ -25,12 +28,10 @@
         android:layout_width="277dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:text="Word"
         android:textSize="40dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/getDefinition"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,13 +39,11 @@
 
     <TextView
         android:id="@+id/definition"
-        android:layout_width="394dp"
+        android:layout_width="370dp"
         android:layout_height="43dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:text="Definition"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
