--- a/app/src/main/res/layout/activity_vocab2.xml
+++ b/app/src/main/res/layout/activity_vocab2.xml
@@ -18,6 +18,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:text="Refresh"
+        android:textColor="#2e8b57"
+        android:background="@drawable/transparent_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/save"
         app:layout_constraintHorizontal_bias="0.5"
@@ -46,6 +48,8 @@
         android:layout_marginStart="8dp"
         android:onClick="add"
         android:text="Add Word"
+        android:textColor="#2e8b57"
+        android:background="@drawable/transparent_button"
         app:layout_constraintBaseline_toBaselineOf="@+id/refresh"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -56,6 +60,8 @@
         android:layout_width="125dp"
         android:layout_height="wrap_content"
         android:text="Save"
+        android:textColor="#2e8b57"
+        android:background="@drawable/transparent_button"
         app:layout_constraintBaseline_toBaselineOf="@+id/refresh"
         app:layout_constraintEnd_toStartOf="@+id/add"
         app:layout_constraintHorizontal_bias="0.5"
