--- a/app/src/main/res/layout/activity_mock_exam.xml
+++ b/app/src/main/res/layout/activity_mock_exam.xml
@@ -9,25 +9,56 @@
     tools:context=".MockExam"
     tools:layout_editor_absoluteY="81dp">
 
-    <include
-        android:id="@+id/action_bar"
-        layout="@layout/action_bar">
-    </include>
-
     <Button
         android:id="@+id/Beginexam"
-        android:layout_width="246dp"
-        android:layout_height="56dp"
+        style="@android:style/Widget.Material.Light.Button.Borderless.Small"
+        android:layout_width="59dp"
+        android:layout_height="57dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="160dp"
+        android:background="@android:drawable/checkbox_on_background"
         android:onClick="onClick1"
-        android:text="BEGIN EXAM"
-        android:textSize="24sp"
+        android:textAppearance="@android:style/TextAppearance.Holo.SearchResult.Title"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <SeekBar
+        android:id="@+id/seekBar2"
+        style="@android:style/Widget.SeekBar"
+        android:layout_width="266dp"
+        android:layout_height="66dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:thumb="@android:color/holo_blue_bright"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="134dp"
+        android:layout_height="85dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="4dp"
+        android:gravity="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        app:fontFamily="monospace"
+        app:layout_constraintBottom_toTopOf="@+id/Beginexam"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/seekBar2"
+        app:layout_constraintVertical_bias="0.063" />
 
 </android.support.constraint.ConstraintLayout>
