--- a/app/src/main/res/layout/activity_questionslist.xml
+++ b/app/src/main/res/layout/activity_questionslist.xml
@@ -6,30 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".questionslist">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <include
-            android:id="@+id/action_bar"
-            layout="@layout/action_bar">
-        </include>
-        
         <TextView
             android:id="@+id/messageWindow2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:lineSpacingExtra="6dp"
             android:text="TextView"
-            android:textSize="24sp" />
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/questionContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
-            android:textSize="36sp"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <CheckBox
@@ -37,43 +33,50 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="CheckBox"
-            android:textSize="30sp" />
+            android:textSize="18sp" />
 
         <CheckBox
             android:id="@+id/checkBox2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="CheckBox"
-            android:textSize="30sp" />
+            android:textSize="18sp" />
 
         <CheckBox
             android:id="@+id/checkBox3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="CheckBox"
-            android:textSize="30sp" />
+            android:textSize="18sp" />
 
         <CheckBox
             android:id="@+id/checkBox4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="CheckBox"
-            android:textSize="30sp" />
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/previousQuestion"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="previous question" />
+            android:text="previous"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/nextQuestion"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="next question" />
+            android:text="next"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/submitAll"
+            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Submit All and Finish" />
