UI updated, bug fixed

--- a/app/src/main/res/layout/activity_add_word.xml
+++ b/app/src/main/res/layout/activity_add_word.xml
@@ -15,8 +15,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="300dp"
         android:text="Word"
+        android:textColor="#000"
         android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/editWord"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -29,8 +32,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="245dp"
         android:text="Definition"
+        android:textColor="#000"
         android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/editDefinition"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -39,9 +45,13 @@
 
     <Button
         android:id="@+id/submit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="75dp"
+        android:background="@drawable/rounded_buttonsg"
         android:text="Submit"
+        android:textColor="#000"
+        android:textSize="25sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -50,9 +60,10 @@
 
     <EditText
         android:id="@+id/editWord"
-        android:layout_width="wrap_content"
+        android:layout_width="365dp"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:hint="type in the word"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/tellDefinition"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,11 +73,12 @@
 
     <EditText
         android:id="@+id/editDefinition"
-        android:layout_width="wrap_content"
+        android:layout_width="365dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
+        android:hint="type in the definition"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/submit"
         app:layout_constraintEnd_toEndOf="parent"
